[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytkwrap"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Doyle Rowland", email = "weibullguy@protonmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/weibullguy/pytkwrap#readme"
Issues = "https://github.com/weibullguy/pytkwrap/issues"
Source = "https://github.com/weibullguy/pytkwrap"

[tool.hatch.version]
path = "src/pytkwrap/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "prek>=0.3.9",
    "pycairo>=1.29",
    "pygobject>=3.54",
    "pylint",
    "pypubsub>=4.0",
    "python-dateutil",
]
[tool.hatch.envs.default.scripts]
install = "pip install -e ."

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.test]
extra-dependencies = [
    "coveralls",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-icdiff",
    "pytest-order",
    "pytest-sugar",
    "typing_extensions",
]

[tool.hatch.envs.test.scripts]
update = "pip install -U pip && pip install -U `pip list --outdated | tail -n +3 | cut -d ' ' -f1`"
install = "pip install -e ."
clean-test = "rm -f .coverage* cobertura.xml && rm -fr .pytest_cache"
unit = "pytest -x -s -vvv -m unit --no-cov --cache-clear {args}"
unit-coverage = "COVERAGE_FILE='.coverage.unit' pytest -m unit --cov-config=pyproject.toml --cov=pytkwrap --cov-branch --cov-report=term-missing tests/common/"
integration = "pytest -x -s -v -m integration --no-cov --cache-clear tests/common/"
integration-coverage = "COVERAGE_FILE='.coverage.integration' pytest -m integration --cov-config=pyproject.toml --cov=pytkwrap --cov-branch --cov-report=term-missing tests/common/"
coverage-combine = "coverage combine .coverage.unit .coverage.integration"
coverage-report = "coverage html --rcfile=pyproject.toml"
test = [
    "install",
    "unit",
    "integration",
]
test-coverage = [
    "install",
    "unit-coverage",
    "integration-coverage",
    "coverage-combine",
    "coverage-report",
]

[tool.hatch.envs.lint]
extra-dependencies = [
    "bandit[toml]",
    "docformatter[tomli]>=1.7",
    "isort",
    "mccabe",
    "pylint",
    "radon",
    "ruff",
    "wily",
]
[tool.hatch.envs.lint.scripts]
update = "pip install -U pip && pip install -U `pip list --outdated | tail -n +3 | cut -d ' ' -f1`"
fix = "prek run ruff-check --files {args}"
format = [
    "prek run black --files {args}",
    "prek run docformatter --files {args}",
    "prek run isort --files {args}",
]
lint = "prek run pylint --files {args}"
maintain = [
    "radon hal {args}",
    "radon cc --show-complexity {args}",
    "radon mi --show {args}",
]
security = "bandit -c pyproject.toml -b .bandit.baseline -r {args}"
wily = "prek run wily --files {args}"
all = [
    "fix",
    "format",
    "lint",
    "maintain",
]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
    "ty",
]
[tool.hatch.envs.types.scripts]
all = [
    "prek run mypy --files {args}",
    "ty check {args}",
]
make-stub = "stubgen --include-private -o src {args}"

[tool.hatch.envs.docs]
extra-dependencies = [
    "Babel",
    "docutils",
    "myst_parser",
    "pyroma",
    "recommonmark",
    "rstcheck[toml,sphinx]",
    "Sphinx",
    "sphinxcontrib-issuetracker",
    "sphinxcontrib-spelling",
    "sphinx-conestack-theme",
]

[tool.hatch.envs.docs.scripts]
clean = "cd docs && rm -fr _build/html/*"
lint = "rstcheck --config ./pyproject.toml -r docs/requirements docs/api"
api-docs = "sphinx-apidoc -f -o docs/api src/pytkwrap"
make = "cd docs && make html -e"
make-docs = [
    "clean",
    "make",
]

[tool.bandit]
exclude_dirs = [
    "tests/",
]
skips = [
    "B105",
]

[tool.black]
line-length = 88
target-version = [
    "py310",
    "py311",
    "py312",
    "py313",
]
workers = 5

[tool.coverage.run]
source_pkgs = ["pytkwrap"]
branch = true
parallel = true
omit = [
    "src/pytkwrap/__about__.py",
]

[tool.coverage.paths]
pytkwrap = ["src/pytkwrap", "*/pytkwrap/src/pytkwrap"]
tests = ["tests", "*/pytkwrap/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.docformatter]
non-cap = [
    "pytkwrap",
]
wrap-summaries = 88
wrap-descriptions = 88

[tool.isort]
known_first_party = 'pytkwrap'
known_third_party = [
    'gi',
    'pubsub',
    'pytest',
]
import_heading_firstparty = 'pytkwrap Package Imports'
import_heading_localfolder = 'pytkwrap Local Imports'
import_heading_stdlib = 'Standard Library Imports'
import_heading_thirdparty = 'Third Party Imports'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
[[tool.mypy.overrides]]
module = ["gi", "gi.repository", "gi.overrides.*", ]
ignore_missing_imports = true

[tool.pylint.master]
ignore-paths = [
    'tests*'
]
ignore-patterns = [
    '\S*.pyi'
]
persistent = true

[tool.pylint.basic]
attr-rgx = '^_{0,2}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}$'
good-names = [
    '_'
]
variable-rgx = '^_{0,2}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}$'

[tool.pylint.design]
max-parents = 10

[tool.pylint.format]
max-line-length = 88
indent-string = '    '
max-module-lines = 5000

[tool.pylint.messages_control]
disable = [
    "fixme",
    "too-many-arguments",
    "too-many-positional-arguments",
    "wrong-import-position",
]

[tool.pylint.miscellaneous]
notes = [
    'FIXME',
    'ISSUE',
    'TODO'
]

[tool.pylint.reports]
reports = true

[tool.pylint.similarities]
min-similarity-lines = 100
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.typecheck]
ignore-mixin-members = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=build --ignore=data --ignore=docs --ignore=locale --ignore=__init__.py"
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".tox",
    "build",
    "dist",
]
testpaths = ["tests", "tests/common"]
markers = [
    "unit: marks the test as a unit test.",
    "integration: marks the test as an integration test.",
    "requirement: marks the test the verification for requirement X.",
    "issue: marks the test as the regression test for issue X.",
]

[tool.rstcheck]
report = "warning"
ignore_directives = [
    "automodule",
    "tabularcolumns",
    "toctree",
]
ignore_messages = [
    "Duplicate implicit target name",
    "Hyperlink target",
]
ignore_roles = [
    "numref",
]

[tool.ruff]
builtins = [
    "_",
]
extend-exclude = [
    ".idea",
    ".pytest_cache",
    "htmlcov",
    "tests",
]
indent-width = 4
line-length = 88
target-version = "py310"

[tool.ruff.analyze]
type-checking-imports = false

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = '^_{0,2}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}_{0,1}[a-zA-Z]{0,15}$'
fixable = ["ALL"]
ignore = [
    "D203",
    "D204",
    "D213",
]
select = [
    "B",
    "D",
    "DOC",
    "E",
    "F",
    "N",
    "PLC",
    "PLR",
    "S",
    "SIM",
    "UP",
]
task-tags = [
    "BUG",
    "FIXME",
    "TODO",
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D205",
    "DOC201",
    "DOC402",
    "PLC1901",
    "PLC2701",
    "PLR0904",
    "PLR2004",
    "PLR6301",
    "S101",
]
[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = []
ignore-var-parameters = true
property-decorators = []

[tool.ruff.lint.pylint]
max-args = 8
max-positional-args = 6

[tool.ty.analysis]
allowed-unresolved-imports = [
    "gi.overrides.*"
]
respect-type-ignore-comments = true

[tool.ty.environment]
python-version = "3.12"
root = [
    "./src"
]

[tool.ty.rules]
inconsistent-mro = "ignore"

[tool.ty.src]
exclude = [
    "tests"
]
include = [
    "examples",
    "src"
]
